plogapp/tests/errors/WrongNumberOfArgs.plog
sorts
#s = {o}.
attributes
a: #s,#s -> #s.
statements
a(o) = o.
